fixed the image size as it was too big

--- a/index.css
+++ b/index.css
@@ -6,3 +6,8 @@ body {
     color: white;
     line-height: 1.6;
 }
+
+/* makes all images responsive */
+img {
+    max-width: 50%;
+}
